# netrandom

./: README.md  pyproject.toml
netrandom/: __init__.py  rand_ip.py  rand_mac.py
tests/: test_main.py
