[tool.poetry]
name = "netrandom"
version = "0.1.0"
description = "Generate random network addresses"
authors = ["Patrick Keohane <pgkeohane@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
